# ltp

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: container-registry.yml
src/: app.py
src/ltp_app/: MyApp.py  __init__.py  app.py
tests/: test_arguments.py
