[tool.poetry]
name = "ltp-app"
version = "0.1.0"
description = ""
authors = ["Miyana Stange"]
readme = "README.md"
packages = [{include = "ltp_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
pyjwt = "0.4.3"  # something vulnerable

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
